[package]
name = "encodetool"
version = "0.1.0"
edition = "2021"
authors = ["Louis Leveque"]
description = "Batch video processor for macOS using VideoToolbox"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.4"
chrono = "0.4"
filetime = "0.2"
anyhow = "1.0"
thiserror = "1.0"
regex = "1.10"
